Make box resize handles smaller. Fixes UI issues with layer z-index buttons

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -748,3 +748,17 @@ html.presentation
     width 200px
 
 
+
+.ui-resizable-e
+  height 50%
+  top 25%
+  bottom 25%
+
+.ui-resizable-s
+  width 50%
+  left 25%
+  right 25%
+
+
+
+
